methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for(j<-0 to 6){
       ^MethodsReturning:27: error: type mismatch;
 found   : Unit
 required: Boolean
  avance()
        ^